# toy-bitvm-rs

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  regtest-commands.sh
.githooks/: pre-commit
.github/workflows/: check-and-lint.yaml  ci.yaml  test.yaml
bristol/: sha256.txt  test.txt  test2.txt
docs/: bridge_design.md
src/: actor.rs  bit_commitment.rs  circuit.rs  communication.rs  config.rs  gates.rs  lib.rs  main.rs  prover.rs  transactions.rs  utils.rs  verifier.rs  wire.rs
src/circuit/: gates.rs  mod.rs
src/traits/: bit_commitment.rs  circuit.rs  gate.rs  mod.rs  prover.rs  verifier.rs  wire.rs
src/transactions/: mod.rs
